# CMakeList.txt : CMake project for SLR(1), include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("SLR(1)")

# Add source to this project's executable.
add_executable (CMakeTarget "SLR(1).cpp" "SLR(1).h")

# TODO: Add tests and install targets if needed.
